# OPNManager

./: PRIVACY_POLICY.md  README.md  codemagic.yaml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: Test.yml  build-android.yml  clear-cache.yml  init-android.yml  populate-cache.yml
scripts/: retag.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: alias.rs  commands.rs  dashboard.rs  db.rs  devices.rs  firewall.rs  firewall_logs.rs  http_client.rs  interfaces.rs  lib.rs  main.rs  pin_cache.rs  power.rs  routes.rs  snapshots.rs  system_resources.rs  traffic.rs  unbound.rs  update_checker.rs  wol.rs
src-tauri/src/tunables/: mod.rs
src/lib/components/alias/: AddAliasModal.svelte
src/lib/components/dashboard/: CpuTemperatureCard.svelte  DashboardConfig.svelte  DiskUsageCard.svelte  GatewaysCard.svelte  InterfaceTrafficCard.svelte  InterfaceTrafficGraph.svelte  MemoryUsageCard.svelte  NetworkInformationColumn.svelte  ServicesCard.svelte  SystemResourcesColumn.svelte  TunablesWidget.svelte  UptimeCard.svelte  WolWidget.svelte  index.ts
src/lib/components/firewall/: AddFirewallRuleModal.svelte  EditFirewallRuleModal.svelte
src/lib/stores/: authStore.ts  dashboardStore.ts
src/lib/utils/: dashboardCleanup.ts  iosFocusFix.js  iosScrollManager.js
src/routes/: +layout.svelte  +page.svelte  AppLayout.svelte
src/routes/alias/: +page.svelte
src/routes/devices/: +page.svelte
src/routes/interfaces/: +page.svelte
src/routes/logout/: +page.svelte
src/routes/logs/: +page.svelte  logWorker.ts
src/routes/routes/: +page.svelte
src/routes/rules/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/snapshots/: +page.svelte
src/routes/topology/: +page.svelte
src/routes/tunables/: +page.svelte
src/routes/unbound/: +page.svelte
src/routes/updates/: Updates.svelte
src/routes/wol/: +page.svelte
(+13 files in other folders)
