[package]
name = "opnmanager"
version = "3.1.2"
description = "OPNManager mobile"
authors = ["Your Name <you@example.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-log = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.4.1"
anyhow = "1"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

# forza la versione compatibile di tauri-utils per evitare il mismatch
[patch.crates-io]
tauri-utils = "=2.5.1"